--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>My Portfolio</title>
 <link rel="stylesheet" href="style.css">
+<link rel="icon" type="image/x-icon" href="images/favicon.ico">
 <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
 </head>
 <body>
